# rumi

./: BUILD  MODULE.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-rumi  bazel-testlogs  main.cc
mediapipe/: BUILD
mediapipe/framework/tool/: BUILD  mediapipe_graph.bzl
mediapipe/graphs/hand_tracking/: BUILD
mediapipe/modules/hand_landmark/: BUILD
mediapipe/modules/palm_detection/: BUILD
