###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "rumi",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "tflite", version = "0.0.1")
local_path_override(
    module_name = "tflite",
    path = "third_party/tflite",
)

#use_repo(name = "palm_model", path = "third_party/models/palm_detection")
#use_repo(name = "hand_model", path = "third_party/models/hand_landmark")

#declare_models = use_extension("//third_party/models:extensions.bzl", "declare_models")
#use_repo(declare_models, "palm_model")
#use_repo(declare_models, "hand_model")
#
## Local vendored TFLite
#local_path_override(
#    module_name = "org_tensorflow",
#    path = "third_party/tflite"
#)
